--- a/404.html
+++ b/404.html
@@ -1,6 +1,9 @@
 ---
 permalink: /404.html
 layout: default
+title: 404 - Page Not Found
+description: The page you're looking for doesn't exist. Let me help you find what you need.
+sitemap: false
 ---
 
 <style type="text/css" media="screen">
@@ -22,4 +25,5 @@ layout: default
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <p><a href="/">← Back to Home</a></p>
 </div>
